@@ -1,3 +1,21 @@
+2009-02-24  Rafael Avila de Espindola  <espindola@google.com>
+
+	* ipa.c (cgraph_remove_unreachable_nodes): Search all clones.
+	* lto-cgraph.c: Include lto-util.h
+	(maybe_redirect_inlined_node): Remove.
+	(output_edge): Don't worry about an edge poiting to a node not in know
+	by the encoder.
+	(output_node): Output the decl number instead of the master node
+	number in the case of a clone.
+	(output_cgraph_verify_node): Don't check that the master is in the set.
+	(output_cgraph): Don't output the current master for each decl. The
+	first node output will be the master in ltrans.
+	(input_node): If a clone, read the decl number and use that decls'
+	master node.
+	(input_cgraph_1): Update call to input_node.
+	* lto-function-out.c (lto_output): Proces each function once. Don't
+	care if the node is the master.
+
 2009-02-24  Diego Novillo  <dnovillo@google.com>
 
 	* doc/invoke.texi: Document -flto, -fwhopr and -flto-report.
