@@ -565,32 +565,23 @@ finish:
 
 static void
 lto_add_inline_clones (cgraph_node_set set, struct cgraph_node *node,
-		       bitmap original_nodes, bitmap inlined_decls)
+		       bitmap original_decls, bitmap inlined_decls)
 {
-   struct cgraph_node *master_clone, *callee;
+   struct cgraph_node *callee;
    struct cgraph_edge *edge;
 
-   /* NODE must be an inlined clone.  Add both its master clone and node
-      itself to SET and mark the decls as inlined.  */
-   if (!bitmap_bit_p (original_nodes, node->uid))
-     {
-	master_clone = cgraph_master_clone (node, false);
-	gcc_assert (master_clone != NULL && master_clone != node);
-	if (!cgraph_node_in_set_p (master_clone, set))
-	  {
-	    cgraph_node_set_add (set, master_clone);
-	    bitmap_set_bit (inlined_decls, DECL_UID (node->decl));
-	  }
-	cgraph_node_set_add (set, node);
-     }
-   
+   cgraph_node_set_add (set, node);
+
+   if (!bitmap_bit_p (original_decls, DECL_UID (node->decl)))
+     bitmap_set_bit (inlined_decls, DECL_UID (node->decl));
+
    /* Check to see if NODE has any inlined callee.  */
    for (edge = node->callees; edge != NULL; edge = edge->next_callee)
      {
 	callee = edge->callee;
 	if (callee->global.inlined_to != NULL)
-	    lto_add_inline_clones (set, callee, original_nodes,
-				   inlined_decls);
+	  lto_add_inline_clones (set, callee, original_decls,
+				 inlined_decls);
      }
 }
 
@@ -604,21 +595,54 @@ lto_add_all_inlinees (cgraph_node_set set)
   cgraph_node_set_iterator csi;
   struct cgraph_node *node;
   bitmap original_nodes = lto_bitmap_alloc ();
+  bitmap original_decls = lto_bitmap_alloc ();
   bitmap inlined_decls = lto_bitmap_alloc();
+  bool changed;
 
   /* We are going to iterate SET will adding to it, mark all original
      nodes so that we only add node inlined to original nodes.  */
   for (csi = csi_start (set); !csi_end_p (csi); csi_next (&csi))
-    bitmap_set_bit (original_nodes, csi_node (csi)->uid);
+    {
+      bitmap_set_bit (original_nodes, csi_node (csi)->uid);
+      bitmap_set_bit (original_decls, DECL_UID (csi_node (csi)->decl));
+    }
+
+  /* Some of the original nodes might not be needed anymore.  Remove them. */
+  do
+    {
+      changed = false;
+      for (csi = csi_start (set); !csi_end_p (csi); csi_next (&csi))
+	{
+	  struct cgraph_node *inlined_to;
+	  node = csi_node (csi);
+
+	  /* NODE was not inlined. We still need it. */
+	  if (!node->global.inlined_to)
+	    continue;
+
+	  inlined_to = node->global.inlined_to;
+
+	  /* NODE should have only one caller */
+	  gcc_assert (!node->callers->next_caller);
+
+	  if (!bitmap_bit_p (original_nodes, inlined_to->uid))
+	    {
+	      bitmap_clear_bit (original_nodes, node->uid);
+	      cgraph_node_set_remove (set, node);
+	      changed = true;
+	    }
+	}
+    } while (changed);
 
   for (csi = csi_start (set); !csi_end_p (csi); csi_next (&csi))
     {
       node = csi_node (csi);
       if (bitmap_bit_p (original_nodes, node->uid))
-	lto_add_inline_clones (set, node, original_nodes, inlined_decls);
+	lto_add_inline_clones (set, node, original_decls, inlined_decls);
     }
 
   lto_bitmap_free (original_nodes);
+  lto_bitmap_free (original_decls);
   return inlined_decls;
 }
 
@@ -748,8 +772,7 @@ lto_scan_statics_in_cgraph_node (struct cgraph_node *node,
   struct lto_in_decl_state *state;
   
   /* Return if NODE has no function body or is not the master clone. */
-  if (!node->analyzed
-      || (node->master_clone != NULL && node->master_clone != node))
+  if (!node->analyzed)
     return;
   
   /* Return if the DECL of nodes has been visited before.  */
