@@ -1,3 +1,8 @@
+2009-02-24  Rafael Avila de Espindola  <espindola@google.com>
+
+	* gcc.dg/lto/20090218-2_0.c: New.
+	* gcc.dg/lto/20090218-2_1.c: New.
+
 2009-02-23  Rafael Avila de Espindola  <espindola@google.com>
 
 	* gcc/testsuite/gcc.dg/lto/20090218-1_0.c: New.
